editors/tree-sitter-ultraviolet/grammar.js
    source_file: $ => repeat(choice($._item, $.attribute, $._terminator)),

    _terminator: $ => choice(';', $._newline),

    // ---- comments --------------------------------------------------------

    line_comment: _ => token(seq('//', /[^\n]*/)),
    _item: $ => choice(
      $.import_declaration,
      $.using_declaration,
      $.static_declaration,
      $.procedure_declaration,
      $.comptime_procedure_declaration,
      $.record_declaration,
      $.enum_declaration,
      $.modal_declaration,
      $.class_declaration,
      $.type_alias_declaration,
      $.extern_block,
      $.derive_target_declaration,
    ),

    visibility: _ => choice('public', 'internal', 'private', 'protected'),

    import_declaration: $ => seq(
      ...declPrefix($), 'import', field('path', $.module_path),
      optional(seq('as', field('alias', $.identifier))),
    ),

    using_declaration: $ => seq(
      ...declPrefix($), 'using', $._name, repeat(seq('::', $._name)),
      optional(choice(seq('::', '*'), seq('::', $.using_list))),
      optional(seq('as', field('alias', $._name))),
    ),
    using_list: $ => seq('{', commaSep($.using_specifier), '}'),
    using_specifier: $ => seq(
      field('name', $.identifier), optional(seq('as', field('alias', $.identifier))),
    ),
    module_path: $ => prec.left(seq($._name, repeat(seq('::', $._name)))),

    procedure_declaration: $ => seq(
      ...declPrefix($), optional('override'), 'procedure', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional(seq(optional($._nl), $.contract_clause)),
      optional($._nl),
      field('body', $.block),
    ),

    _nl: $ => repeat1($._newline),

    parameters: $ => seq('(', commaSep(choice($.parameter, $.receiver)), ')'),
    parameter: $ => seq(
      optional('move'), field('name', $._name), ':', field('type', $._type),
    ),
    receiver: _ => choice('~', '~!', '~%'),

    generic_parameters: $ => seq(
      '<', $.generic_parameter, repeat(seq(choice(';', ','), $.generic_parameter)), optional(';'), '>',
    ),
    generic_parameter: $ => seq(
      optional(field('variance', choice('+', '-', '='))),
      field('name', $._name),
      optional(seq('<:', $.class_bound, repeat(seq(choice(',', '+'), $.class_bound)))),
      optional(seq('=', field('default', $._type))),
    ),
    class_bound: $ => seq($.type_path, optional($.generic_arguments)),
    generic_arguments: $ => seq('<', commaSep($._type), '>'),

    contract_clause: $ => prec.right(seq(
      '|:',
      choice(
        seq(field('precondition', $._contract_predicate),
          optional(seq('|=', field('postcondition', $._contract_predicate)))),
        seq('|=', field('postcondition', $._contract_predicate)),
      ),
    )),
    _contract_predicate: $ => choice($._value, $.predicate_block),
    predicate_block: $ => seq('{', $._expression, '}'),

    implements_clause: $ => seq('<:', $.class_bound, repeat(seq(choice(',', '+'), $.class_bound))),

    record_declaration: $ => seq(
      ...declPrefix($), 'record', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      optional($.implements_clause),
      optional($._nl),
      field('body', $.record_body),
      optional($.type_invariant),
    ),
    record_body: $ => seq('{', repeat(choice($._record_member, $._terminator, ',', $.attribute)), '}'),
    _record_member: $ => choice($.field_declaration, $.procedure_declaration, $.associated_type),
    field_declaration: $ => seq(
      ...declPrefix($), optional($.key_boundary), field('name', $._name), ':', field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),
    key_boundary: _ => '#',
    associated_type: $ => seq(
      ...declPrefix($), 'type', field('name', $._name), optional(seq('=', field('type', $._type))),
    ),

    enum_declaration: $ => seq(
      ...declPrefix($), 'enum', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      optional($.implements_clause),
      optional($._nl),
      field('body', $.enum_body),
      optional($.type_invariant),
    ),
    enum_body: $ => seq('{', repeat(choice($.variant, $._terminator, ',', $.attribute)), '}'),
    variant: $ => seq(
      field('name', $._name),
      optional(choice($.variant_tuple_payload, $.variant_record_payload)),
      optional(seq('=', field('discriminant', $.integer_literal))),
    ),
    variant_tuple_payload: $ => seq('(', commaSep($._type), ')'),
    variant_record_payload: $ => seq('{', commaSep($.field_declaration), '}'),

    modal_declaration: $ => seq(
      ...declPrefix($), 'modal', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      optional($.implements_clause),
      optional($._nl),
      field('body', $.modal_body),
      optional($.type_invariant),
    ),
    modal_body: $ => seq('{', repeat(choice($.state_block, $._terminator, $.attribute)), '}'),
    state_block: $ => seq(
      '@', field('name', $._name),
      '{', repeat(choice($._state_member, $._terminator, ',', $.attribute)), '}',
    ),
    _state_member: $ => choice($.field_declaration, $.procedure_declaration, $.transition_declaration),
    transition_declaration: $ => seq(
      ...declPrefix($), 'transition', field('name', $._name), field('parameters', $.parameters),
      '->', '@', field('target', $._name), field('body', $.block),
    ),

    class_declaration: $ => seq(
      ...declPrefix($), optional('modal'), 'class', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      optional($.implements_clause),
      optional($._nl),
      field('body', $.class_body),
    ),
    class_body: $ => seq('{', repeat(choice($._class_item, $._terminator, $.attribute)), '}'),
    _class_item: $ => choice(
      $.field_declaration, $.procedure_declaration, $.procedure_signature, $.associated_type,
      $.abstract_state,
    ),
    procedure_signature: $ => seq(
      ...declPrefix($), optional('override'), 'procedure', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional(seq(optional($._nl), $.contract_clause)),
      repeat(seq(optional($._nl), $.foreign_contract)),
    ),
    type_alias_declaration: $ => seq(
      ...declPrefix($), 'type', field('name', $._name),
      optional(field('type_parameters', $.generic_parameters)),
      '=', field('type', $._type),
    ),

    extern_block: $ => seq(
      ...declPrefix($), 'extern', optional(field('abi', choice($.string_literal, $.identifier))),
      '{', repeat(choice($.procedure_signature, $._terminator, $.attribute)), '}',
    ),
    foreign_contract: $ => seq(
      '|:', '@', field('kind', $.identifier), token.immediate('('),
      optional(seq(field('qualifier', $.contract_intrinsic), ':')),
      $._expression, ')',
    ),

    attribute: $ => seq(
      '#', field('name', $.attribute_name),
      optional(field('arguments', $.attribute_arguments)),
    ),
    attribute_name: $ => seq($._attribute_word, repeat(seq('::', $._attribute_word))),
    _attribute_word: $ => choice($.identifier, 'static', 'dynamic'),
    attribute_arguments: $ => seq(token.immediate('('), commaSep($.attribute_argument), ')'),
    attribute_argument: $ => choice(
      $._literal,
      $._attribute_word,
      seq(field('key', $._attribute_word), ':', choice($._literal, $._attribute_word)),
      seq(field('key', $._attribute_word), '(', commaSep($.attribute_argument), ')'),
    ),

    // ---- types -----------------------------------------------------------

    _type: $ => choice(
      $.union_type,
      $._type_no_union,
    ),
    _type_no_union: $ => choice(
      $.permission_type,
      $.refinement_type,
      $.type_path,
      $.generic_type,
      $.state_type,
      $.unit_type,
      $.never_type,
      $.tuple_type,
      $.array_type,
      $.slice_type,
      $.function_type,
      $.closure_type,
      $.raw_pointer_type,
      $.dynamic_type,
      $.opaque_type,
    ),
    union_type: $ => prec.left(1, seq($._type, '|', $._type)),
    permission_type: $ => prec.right(2, seq(choice('const', 'unique', 'shared'), $._type_no_union)),
    refinement_type: $ => prec.left(3, seq($._type_no_union, '|:', $.predicate_block)),
    type_path: $ => prec.left(seq($._name, repeat(seq('::', $._name)))),
    generic_type: $ => seq($.type_path, $.generic_arguments),
    state_type: $ => seq(
      choice($.type_path, $.generic_type), '@', field('state', $._name),
    ),
    unit_type: _ => seq('(', ')'),
    tuple_type: $ => seq(
      '(', $._type, choice(';', seq(repeat(seq(',', $._type)), optional(','))), ')',
    ),
    array_type: $ => seq('[', field('element', $._type), ';', field('length', $._expression), ']'),
    closure_type: $ => prec.right(seq(
      '|', commaSep(seq(optional('move'), $._type_no_union)), '|', '->', $._type,
      optional($.closure_dependencies),
    )),
    closure_dependencies: $ => seq(
      '[', 'shared', ':', '{', commaSep(seq($._name, ':', $._type)), '}', ']',
    ),
    raw_pointer_type: $ => prec.right(2, seq('*', choice('imm', 'mut'), $._type_no_union)),
    dynamic_type: $ => prec.right(seq('$', $.type_path, optional($.generic_arguments))),
    _pattern: $ => choice(
      $.literal_pattern,
      $.wildcard_pattern,
      $.identifier_pattern,
      $.typed_pattern,
      $.tuple_pattern,
      $.record_pattern,
      $.enum_pattern,
      $.modal_pattern,
      $.range_pattern,
      $.splice,
    ),
    identifier_pattern: $ => $.identifier,
    field_pattern: $ => seq(
      field('name', $._name), optional(seq(':', field('pattern', $._pattern))),
    ),
    enum_pattern: $ => seq(
      $._name, repeat1(seq('::', $._name)),
      optional(choice(
        seq('(', commaSep($._pattern), ')'),
        seq('{', commaSep($.field_pattern), '}'),
      )),
    ),
    modal_pattern: $ => seq(
      '@', field('state', $._name), optional(seq('{', commaSep($.field_pattern), '}')),
    ),
    block: $ => seq(
      '{',
      repeat($._terminator),
      optional(seq(
        $._block_element,
        repeat(seq(repeat1($._terminator), $._block_element)),
        repeat($._terminator),
      )),
      '}',
    ),

    _block_element: $ => seq(repeat($.attribute), $._statement),

    let_statement: $ => seq(
      choice('let', 'var'), field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      choice('=', ':='), field('value', $._value),
    ),
    assignment_statement: $ => seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=')),
      field('right', $._value),
    ),
    expression_statement: $ => $._expression,
    return_statement: $ => prec.right(seq('return', optional($._value))),
    region_statement: $ => seq(
      'region',
      optional(seq('(', field('options', $._expression), ')')),
      optional(seq('as', field('alias', $._name))),
      field('body', $.block),
    ),
    key_block_statement: $ => seq(
      '%',
      field('kind', choice(
        'read', 'write', seq('release', choice('read', 'write')),
        seq('speculative', choice('read', 'write')),
      )),
      commaSep1($.key_path),
      optional($.option_list),
      field('body', $.block),
    ),
    key_path: $ => prec.right(seq(
      field('root', $.identifier),
      repeat(choice(
        seq('.', optional('#'), $._name),
        seq('[', optional('#'), $._expression, ']'),
      )),
    )),

    option_list: $ => seq(alias($._option_bracket, '['), commaSep1($.option), ']'),
    option: $ => choice(
      seq(field('name', $.identifier), ':', field('value', choice($._expression, '+', '*'))),
      field('name', $.identifier),
    ),

    // ---- expressions -----------------------------------------------------

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.scoped_identifier,
      $.unit,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_expression,
      $.record_literal,
      $.modal_literal,
      $.enum_literal,
      $.closure_expression,
      $.if_expression,
      $.loop_expression,
      $.block,
      $.unsafe_block,
      $.unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.range_expression,
      $.pipeline_expression,
      $.field_expression,
      $.index_expression,
      $.call_expression,
      $.generic_call,
      $.method_call_expression,
      $.propagate_expression,
      $.alloc_expression,
      $.transmute_expression,
      $.sizeof_expression,
      $.sync_expression,
      $.wait_expression,
      $.yield_expression,
      $.race_expression,
      $.all_expression,
      $.spawn_expression,
      $.parallel_expression,
      $.dispatch_expression,
      $.comptime_expression,
      $.quote_expression,
      $.type_literal,
      $.splice,
      $.contract_intrinsic,
    ),

    _value: $ => seq(repeat($.attribute), $._expression),

    _literal: $ => choice(
      $.integer_literal, $.float_literal, $.string_literal, $.char_literal, $.boolean_literal,
      $.null_literal,
    ),
    integer_literal: _ => token(seq(
      choice(
        /0x[0-9a-fA-F](_*[0-9a-fA-F])*/,
        /0o[0-7](_*[0-7])*/,
        /0b[01](_*[01])*/,
        DEC,
      ),
      optional('_'),
      INT_SUFFIX,
    )),
    string_literal: $ => seq(
      '"',
      repeat(choice(alias(token.immediate(prec(2, /[^"\\\n]+/)), $.string_content), $.escape_sequence)),
      '"',
    ),
    parenthesized_expression: $ => seq('(', $._value, ')'),
    record_literal: $ => seq(
      field('type', choice($.identifier, $.scoped_identifier, $.state_name, $.generic_name)),
      field('body', $.field_initializer_list),
    ),
    field_initializer_list: $ => seq('{', commaSep($.field_initializer), '}'),
    field_initializer: $ => seq(
      field('name', $._name), optional(seq(':', field('value', $._expression))),
    ),

    if_expression: $ => prec.right(seq(
      'if', field('condition', $._expression),
      choice(
        seq(field('consequence', $.block), optional($.else_clause)),
        seq('is', $._if_case_pattern, field('consequence', $.block), optional($.else_clause)),
        seq('is', $.case_block),
      ),
    )),
    _if_case_pattern: $ => choice($._pattern, $.type_case),
    type_case: $ => seq(':', $._type_no_union),
    else_clause: $ => seq('else', choice($.block, $.if_expression)),
    case_block: $ => seq('{', repeat(choice($.case_arm, $._terminator, ',')), optional($.else_clause), repeat($._terminator), '}'),
    case_arm: $ => seq($._if_case_pattern, $.block),

    loop_expression: $ => seq(
      'loop',
      optional(choice(
        field('condition', $._expression),
        seq(field('pattern', $._pattern), optional(seq(':', field('type', $._type))),
          'in', field('iterator', $._expression)),
      )),
      optional($.loop_invariant),
      field('body', $.block),
    ),
    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '-', '&', '*', 'move', 'copy', 'widen', 'new')),
      field('operand', $._expression),
    )),

    range_expression: $ => choice(
      prec.left(PREC.range, seq($._expression, choice('..', '..='), $._expression)),
      prec.right(PREC.range, seq($._expression, '..')),
      prec.right(PREC.range, seq(choice('..', '..='), $._expression)),
      prec.right(PREC.range, '..'),
    ),

    field_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression), '.',
      field('field', choice($._name, $.integer_literal)),
    )),
    index_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression), '[', field('index', $._expression), ']',
    )),
